[gd_scene load_steps=9 format=3 uid="uid://b0uv8gg3et8fp"]

[ext_resource type="Script" path="res://addons/AWOC/Scenes/Parts/SlotContainer/awoc_slot_container.gd" id="1_kx0k4"]
[ext_resource type="PackedScene" uid="uid://b4lrc2ct3tv6g" path="res://addons/AWOC/Scenes/Parts/HideSlotContainer/HideSlotContainer.tscn" id="2_gyk4s"]
[ext_resource type="Theme" uid="uid://drffev6w87ljh" path="res://addons/AWOC/Themes/main_theme.tres" id="3_1bqud"]
[ext_resource type="Texture2D" uid="uid://dewa5wjv0dbel" path="res://addons/AWOC/Images/Save.svg" id="4_vevws"]
[ext_resource type="Texture2D" uid="uid://cg741telb0c24" path="res://addons/AWOC/Images/Remove.svg" id="5_cvf7v"]
[ext_resource type="Texture2D" uid="uid://bajmsg6jpht1s" path="res://addons/AWOC/Images/GuiVisibilityHidden.svg" id="6_svt4l"]
[ext_resource type="Texture2D" uid="uid://dp60fbkc3xia" path="res://addons/AWOC/Images/GuiVisibilityVisible.svg" id="7_mvxtw"]
[ext_resource type="Texture2D" uid="uid://cnuepoi4ynvoy" path="res://addons/AWOC/Images/Add.svg" id="8_gwhr1"]

[node name="SlotContainer" type="VBoxContainer" node_paths=PackedStringArray("slot_button", "slot_controls_container", "slot_name_edit", "show_button", "hide_button", "hide_slot_container", "hide_slot_select", "add_hide_slot_button", "hide_slot_scroll_container", "confirm_save_dialog", "confirm_delete_dialog")]
custom_minimum_size = Vector2(235, 0)
anchors_preset = -1
anchor_right = 0.214
anchor_bottom = 0.313
offset_right = -10.528
offset_bottom = 0.17598
theme_override_constants/separation = 10
script = ExtResource("1_kx0k4")
slot_button = NodePath("SlotButton")
slot_controls_container = NodePath("SlotControlsContainer")
slot_name_edit = NodePath("SlotControlsContainer/SlotNameEdit")
show_button = NodePath("SlotControlsContainer/ShowButton")
hide_button = NodePath("SlotControlsContainer/HideButton")
hide_slot_container = NodePath("HideSlotsContainer")
hide_slot_select = NodePath("HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer/HideSlotSelectSlot/HideSlotSelect")
add_hide_slot_button = NodePath("HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer/HideSlotSelectSlot/AddHideSlotButton")
hide_slot_scroll_container = NodePath("HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer/HideSlotsScrollBackground/HideSlotsScrollContainer/HideSlotsMarginContainer/HideSlotsContainer")
confirm_save_dialog = NodePath("ConfirmSaveDialog")
confirm_delete_dialog = NodePath("ConfirmDeleteDialog")
hide_slot_container_scene = ExtResource("2_gyk4s")

[node name="SlotButton" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("3_1bqud")
toggle_mode = true
text_overrun_behavior = 1

[node name="SlotControlsContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SlotNameEdit" type="LineEdit" parent="SlotControlsContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme = ExtResource("3_1bqud")

[node name="SaveButton" type="Button" parent="SlotControlsContainer"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
theme = ExtResource("3_1bqud")
icon = ExtResource("4_vevws")
icon_alignment = 1

[node name="DeleteButton" type="Button" parent="SlotControlsContainer"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
theme = ExtResource("3_1bqud")
icon = ExtResource("5_cvf7v")
icon_alignment = 1

[node name="ShowButton" type="Button" parent="SlotControlsContainer"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
theme = ExtResource("3_1bqud")
icon = ExtResource("6_svt4l")
icon_alignment = 1

[node name="HideButton" type="Button" parent="SlotControlsContainer"]
visible = false
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
theme = ExtResource("3_1bqud")
icon = ExtResource("7_mvxtw")
icon_alignment = 1

[node name="HideSlotsContainer" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
color = Color(1, 1, 1, 0.0784314)

[node name="HideSlotsOuterContainer" type="MarginContainer" parent="HideSlotsContainer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="HideSlotsInnerContainer" type="VBoxContainer" parent="HideSlotsContainer/HideSlotsOuterContainer"]
layout_mode = 2

[node name="HideSlotsLabel" type="Label" parent="HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer"]
layout_mode = 2
theme = ExtResource("3_1bqud")
text = "Slots to hide when equipped"
horizontal_alignment = 1

[node name="HideSlotSelectSlot" type="HBoxContainer" parent="HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HideSlotSelect" type="OptionButton" parent="HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer/HideSlotSelectSlot"]
custom_minimum_size = Vector2(198, 0)
layout_mode = 2
theme = ExtResource("3_1bqud")
toggle_mode = false
text_overrun_behavior = 1

[node name="AddHideSlotButton" type="Button" parent="HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer/HideSlotSelectSlot"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme = ExtResource("3_1bqud")
icon = ExtResource("8_gwhr1")
icon_alignment = 1

[node name="HideSlotsScrollBackground" type="ColorRect" parent="HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer"]
custom_minimum_size = Vector2(0, 105)
layout_mode = 2
color = Color(1, 1, 1, 0.117647)

[node name="HideSlotsScrollContainer" type="ScrollContainer" parent="HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer/HideSlotsScrollBackground"]
custom_minimum_size = Vector2(226, 100)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HideSlotsMarginContainer" type="MarginContainer" parent="HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer/HideSlotsScrollBackground/HideSlotsScrollContainer"]
custom_minimum_size = Vector2(240, 100)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HideSlotsContainer" type="VBoxContainer" parent="HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer/HideSlotsScrollBackground/HideSlotsScrollContainer/HideSlotsMarginContainer"]
layout_mode = 2

[node name="ConfirmSaveDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
size = Vector2i(250, 150)
theme = ExtResource("3_1bqud")

[node name="ConfirmDeleteDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
size = Vector2i(250, 150)
theme = ExtResource("3_1bqud")

[connection signal="toggled" from="SlotButton" to="." method="_on_slot_button_toggled"]
[connection signal="pressed" from="SlotControlsContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="SlotControlsContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="SlotControlsContainer/ShowButton" to="." method="_on_show_button_pressed"]
[connection signal="pressed" from="SlotControlsContainer/HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="item_selected" from="HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer/HideSlotSelectSlot/HideSlotSelect" to="." method="_on_hide_slot_select_item_selected"]
[connection signal="pressed" from="HideSlotsContainer/HideSlotsOuterContainer/HideSlotsInnerContainer/HideSlotSelectSlot/AddHideSlotButton" to="." method="_on_add_hide_slot_button_pressed"]
[connection signal="confirmed" from="ConfirmSaveDialog" to="." method="_on_confirm_save_dialog_confirmed"]
[connection signal="confirmed" from="ConfirmDeleteDialog" to="." method="_on_confirm_delete_dialog_confirmed"]
